[package]
name = "tcp-impl"
version = "0.1.0"
edition = "2024"

[lib]
name = "tcp_impl"
path = "src/lib.rs"

[[bin]]
name = "tcp-impl"
path = "src/bin/tcp-impl/main.rs"

[dependencies]
tun = "0.6"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
colored = "3"
ctrlc = "3"
